--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ appdirs==1.4.4
 astunparse==1.6.3
 async-timeout==5.0.1
 attrs==25.1.0
+beautifulsoup4==4.13.3
 blinker==1.9.0
 cachetools==5.5.2
 certifi==2025.1.31
@@ -15,9 +16,11 @@ click==8.1.8
 clikit==0.6.2
 crashtest==0.3.1
 entrypoints==0.4
+filelock==3.17.0
 flatbuffers==25.2.10
 frozenlist==1.5.0
 gast==0.6.0
+gdown==5.2.0
 gitdb==4.0.12
 GitPython==3.1.44
 google-auth==2.38.0
@@ -58,6 +61,7 @@ pydeck==0.9.1
 Pygments==2.19.1
 pylev==1.4.0
 pysimdjson==5.0.2
+PySocks==1.7.1
 pystan==3.7.0
 python-dateutil==2.9.0.post0
 pytz==2025.1
@@ -71,6 +75,7 @@ scikit-learn==1.3.2
 scipy==1.15.2
 six==1.17.0
 smmap==5.0.2
+soupsieve==2.6
 streamlit==1.27.0
 tabulate==0.9.0
 tenacity==8.5.0
@@ -84,6 +89,7 @@ threadpoolctl==3.5.0
 toml==0.10.2
 toolz==1.0.0
 tornado==6.4.2
+tqdm==4.67.1
 typing_extensions==4.12.2
 tzdata==2025.1
 tzlocal==5.3
