--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ filelock==3.17.0
 flatbuffers==25.2.10
 frozenlist==1.5.0
 gast==0.6.0
-gdown
+gdown==5.2.0
 gitdb==4.0.12
 GitPython==3.1.44
 google-auth==2.38.0
