--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ google-pasta==0.2.0
 grpcio==1.70.0
 h5py==3.13.0
 holidays==0.35
-httpstan==4.10.1
+httpstan
 idna==3.10
 importlib-metadata==6.11.0
 Jinja2==3.1.5
